--- a/src/main/resources/templates/pyr/add_product.html
+++ b/src/main/resources/templates/pyr/add_product.html
@@ -56,10 +56,38 @@
 					</label>
 				</div>
 
+<!-- name="product_photo" -->
 				<div id="fileArea">
-					<label id="roomPhotos"> 객실 사진 <input type="file"
-						multiple="multiple" name="product_photo" id="addPhoto">
-					</label>
+					<div id="fileAreaText">
+						<p class="product_img_text">상품 이미지</p>
+						<label id="roomPhotos" for="addPhoto"> 사진 등록 <input
+							type="file" multiple="multiple" 
+							id="addPhoto">
+						</label>
+					</div>
+
+
+					<div class="file_list_area">
+						<div class="file_list_header_area">
+							<div class="file_list_header">
+								<div class="file_list_header_title">파일명</div>
+								<div class="file_list_header_del">전체 삭제</div>
+							</div>
+							<div class="file_info_area">
+								<ul class="file_infos">
+						<!-- 			<li class="file_info_li">
+										<div class="file_img_and_link">
+											<img class="show_file_img" src="your_image_url_here"
+												alt="file_img">
+											<div class="file_link_name">dmadma</div>
+										</div>
+										<button class="file_img_deleate" onclick="deleteFileItem(event)">x</button>
+									</li>
+ -->
+								</ul>
+							</div>
+						</div>
+					</div>
 				</div>
 
 
