--- a/src/main/resources/templates/kdg/cancel.html
+++ b/src/main/resources/templates/kdg/cancel.html
@@ -16,7 +16,7 @@
 </style>
 </head>
 <body>
-<h1>카카오페이 취소가 정상적으로 완료되었습니다.</h1>
-
+<h1>카카오페이 결제가 취소되었습니다.</h1>
+<button type="button" onclick="history.back()">돌아가기</button>
 </body>
 </html>
