--- a/src/main/resources/static/css/pyr_add_product.css
+++ b/src/main/resources/static/css/pyr_add_product.css
@@ -193,7 +193,8 @@ a {
 }
 
 .file_info_area {
-    height: 88px;
+	min-height:50px;
+    max-height: 88px;
     overflow: auto;
 }
 
@@ -202,7 +203,7 @@ a {
     width: 90%;
     margin: 0 auto;
     padding-top: 5px;
-    height: 120px;
+    max-height: 120px;
 }
 
 
