파일업로드

--- a/src/main/resources/templates/syw/notice_modify.html
+++ b/src/main/resources/templates/syw/notice_modify.html
@@ -11,7 +11,23 @@
 <script
 	src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/translations/ko.js"></script>
 
+<style type="text/css">
+.ck-editor__editable {
+	min-height: 500px;
+}
 
+.img_hk {
+	margin: 15px 0;
+}
+
+.img {
+	margin-right: 20px;
+}
+
+input #title {
+	height: 30px;
+}
+</style>
 
 
 
@@ -22,7 +38,7 @@
 <div layout:fragment="adminNav" class="container my-3">
 	<div class="content-container">
 		<h1>공지사항 수정</h1>
-		<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
+		<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}" enctype="multipart/form-data">
 			<div class="notice_title">
 				<label for="title">공지사항 제목</label> <input type="text" id="title"
 					name="title" th:value="${notice.title}" required>
@@ -33,17 +49,60 @@
 				<textarea id="content" name="content" rows="40"
 					data-editor="ckeditor" required th:text="${notice.content}">
 				</textarea>
+				
+				
+				<div class="img_hk">
+				<label for="image" class="img">이미지 업로드 : </label> <input type="file"
+					id="image" name="image" accept="image/jpeg, image/png">
 			</div>
-			<input type="submit" value="등록" class="create_notice_btn">
+			</div>
+			<input type="submit" value="등록" onclick="convertContent()"
+				class="create_notice_btn">
 		</form>
 	</div>
 
 
 	<script>
-    ClassicEditor
-        .create(document.querySelector('[data-editor="ckeditor"]'), {
-            language: "ko"
-        });
+	ClassicEditor.create(document.querySelector('[data-editor="ckeditor"]'), {
+	    language: "ko",
+	    enterMode: 2,
+	    shiftEnterMode: 1,
+	    removePlugins: ['Indent'],
+	    autoParagraph: false,
+	    toolbar: {
+	      items: [
+	        'heading',
+	        '|',
+	        'bold',
+	        'italic',
+	        'underline',
+	        'link',
+	        'bulletedList',
+	        'numberedList',
+	        'blockQuote',
+	        'alignment',
+	        'undo',
+	        'redo',
+	      ]
+	    }
+	  })
+	  .then(editor => {
+	    // Editor configuration and change events remain the same
+	    editor.model.document.on('change:data', () => {
+	      let editorData = editor.getData();
+	      editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
+	      document.getElementById('hiddenContent').value = editorData;
+	    });
+	  })
+	  .catch(error => {
+	    console.error(error);
+	  });
+
+	  function convertContent() {
+	    let editorData = CKEDITOR.instances.content.getData();
+	    editorData = editorData.replace(/<p>/g, '').replace(/<\/p>/g, '');
+	    document.getElementById('hiddenContent').value = editorData;
+	  }
 </script>
 	</body>
 </html>
