--- a/src/main/resources/templates/syw/adminNotice_list.html
+++ b/src/main/resources/templates/syw/adminNotice_list.html
@@ -44,6 +44,10 @@
 				<div class="notice-content"
 					style="background-color: rgb(243, 243, 243); white-space: pre-line;">
 					<p th:utext="${notice.content}"></p>
+					 <!-- 이미지 경로를 Thymeleaf 태그로 불러옴 -->
+					<div class="notice_img">
+                    <img th:if="${notice.imagePath}" th:src="@{/img/notice_img/{imageName}(imageName=${notice.imagePath})}" alt="이미지 없음" width="100%" height="80%"/>
+					</div>
 				<button class="button modi_btn"
 					th:onclick="'window.location.href = \'' + @{/admin/modify/{id}(id=${notice.id})} + '\''">수정</button>
 				<button class="button del_btn"
