--- a/src/main/resources/templates/kdg/fail.html
+++ b/src/main/resources/templates/kdg/fail.html
@@ -3,13 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <title>예약 실패</title>
+
+<style>
+	.backBtn {
+		width: 100%;
+	    height: 56px;
+	    border: none;
+	    font-size: 15px;
+	    line-height: 56px;
+	    color: #fff;
+	    background-color: #e61c51;
+	    text-align: center;
+	    cursor: pointer;
+	    border-radius: 4px 4px 4px 4px;
+	    margin-top: 28px;
+	    font-weight: bold;
+}
+</style>
+
 </head>
 <body>
     <h1>결제에 실패하였습니다.</h1>
-    <h3>결제 상세 정보:</h3>
+    <!-- <h3>결제 상세 정보:</h3>
     <p>주문번호: [[${book.tid}]]</p>
     <p>상품명: [[${book.roomTitle}]]</p>
     <p>결제금액: [[${book.totalPrice}]]</p>
-    <p>결제방법: [[${book.payType}]]</p>
+    <p>결제방법: [[${book.payType}]]</p> -->
+    <button type="button" onclick="history.back()">돌아가기</button>
 </body>
 </html>
