--- a/src/main/resources/templates/kty/my_booking.html
+++ b/src/main/resources/templates/kty/my_booking.html
@@ -179,7 +179,7 @@ color:grey;
 	<!-- 사이드 바 -->
 	<nav id="mypage_sidebar_nav">
 		<ul>
-			<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의
+			<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">내
 					정보</a></li>
 			<!-- <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}" class="active">예약
 						내역</a></li> -->
