--- a/src/main/resources/templates/syw/my_inquiry.html
+++ b/src/main/resources/templates/syw/my_inquiry.html
@@ -70,7 +70,7 @@
    <div id="my_infomation_modify" layout:fragment="content" class="container my-3">
       <nav id="mypage_sidebar_nav">
          <ul>
-            <li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의 정보</a></li>
+            <li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">내 정보</a></li>
             <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약 내역</a></li>
             <li class="mypage_sidebar"><a th:href="@{/user/mypage/my_inquiry}" class="active">문의 내역</a></li>
             <li class="mypage_sidebar"><a th:href="@{/user/mypage/partner_reg}">파트너 신청</a>
