--- a/src/main/resources/static/css/my_product_booklist.css
+++ b/src/main/resources/static/css/my_product_booklist.css
@@ -1,139 +1,150 @@
+.boss_sell_name {
+	margin-top: 20px;
+}
 
-	.boss_sell_name{
-		margin-top: 20px;
-	}
-	.hidden_kty_hidden{
+.hidden_kty_hidden {
 	display: none;
-	}
-	#hidden_part_name{
+}
+
+#hidden_part_name {
 	display: none;
-	}
-	.content-container{
-	margin-top:-30px;
-	}
-	#noMatchMessage{
-	margin-top:10px;
+}
+
+.content-container {
+	/* 	margin-top:-30px; */
+	
+}
+
+#noMatchMessage {
+	margin-top: 10px;
 	display: none;
 	text-align: center;
-	}
-	.select_acc_nam_2{
-	width:200px;
-	height:30px;
-	margin-top:20px;
-	}
-
-	.boss_acc{
-	display:none;
-	margin-top:200px;
-	}
-	
-	 table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: center;
-    }
-
-    th {
-      background-color: #f2f2f2;
-    }
-
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-    .detail_warning{
-    margin-top:20px;
-    }
-    #warning_bookcancle2{
-    	
-    	margin-top: 50px;
-    }
-    
-    #s_1{
-    color: red;
-	margin-right:10px;
-	}
-	
-	#s_2{
-	margin-left:30px;
-	}
-	
-	#sss333{
-	margin-left:20px;
-	}
-	
-	#cancle_penalty{
-	color:red;
-	}
-	
-	.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-#detail_reasoncan{
-	margin-top:23px;
-	margin-left:10px;
-	border-radius: 5px;
-	
-	
-}
-#st_kty_title{
-	font-size:20px;
-}
-#reasonCancle{
-	height:180px;
-	margin-left:20px;
-	margin-top:20px;
 }
 
-#submitButton{
-    width:200px;
-    height:40px;
-    border:none;
-    background-color: orange;
-    font-weight:bold;
-    color:white;
-    font-size:15px;
+.select_acc_nam_2 {
+	width: 200px;
+	height: 30px;
 	margin-top: 20px;
-	  border-radius: 10px;
-	
+	border: 1px solid rgb(205, 205, 205);
 }
+
+#accSelect {
+	height: 33px;
+}
+
+.boss_acc {
+	display: none;
+	margin-top: 200px;
+}
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+th, td {
+	border: 1px solid #ddd;
+	padding: 8px;
+	text-align: center;
+}
+
+th {
+	background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+.detail_warning {
+	margin-top: 20px;
+}
+
+#warning_bookcancle2 {
+	margin-top: 50px;
+}
+
+#s_1 {
+	color: red;
+	margin-right: 10px;
+}
+
+#s_2 {
+	margin-left: 30px;
+}
+
+#sss333 {
+	margin-left: 20px;
+}
+
+#cancle_penalty {
+	color: red;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+#detail_reasoncan {
+	margin-top: 23px;
+	margin-left: 10px;
+	border-radius: 5px;
+}
+
+#st_kty_title {
+	font-size: 20px;
+}
+
+#reasonCancle {
+	height: 180px;
+	margin-left: 20px;
+	margin-top: 20px;
+}
+
+#submitButton {
+	width: 200px;
+	height: 40px;
+	border: none;
+	background-color: orange;
+	font-weight: bold;
+	color: white;
+	font-size: 15px;
+	margin-top: 20px;
+	border-radius: 10px;
+}
+
 .modal-content {
-	text-align:center;
-    background-color: #fff;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    height:300px;
-    max-width: 500px;
-    border-radius: 5px;
-    position: relative;
-    border-radius: 10px;
+	text-align: center;
+	background-color: #fff;
+	margin: 10% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	height: 300px;
+	max-width: 500px;
+	border-radius: 5px;
+	position: relative;
+	border-radius: 10px;
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    margin-top:-10px;
-    font-weight: bold;
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	margin-top: -10px;
+	font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.close:hover, .close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
 }
