--- a/src/main/resources/templates/kty/partner_regi.html
+++ b/src/main/resources/templates/kty/partner_regi.html
@@ -9,100 +9,109 @@
 </html>
 
 <body id="userinfo_modify2">
-	<div id="mypage_partner_reg">
+	<div id="my_infomation_modify">
+		<div id="mypage_partner_reg" class="partner_reg_hk">
 
-		<table id="mypage_partner_reg_table">
-			<tr>
-				<th class="partner_table-th1">업체명<span class="essential_mark"> *</span></th>
-				<td colspan="3" class="partner_table-th2"><input type="text"
-					id="company_name" maxlength="20"></td>
+			<table id="mypage_partner_reg_table">
+				<tr>
+					<th class="partner_table-th1">업체명<span class="essential_mark">
+							*</span></th>
+					<td colspan="3" class="partner_table-th2"><input type="text"
+						id="company_name" maxlength="20"></td>
 
 
-			</tr>
+				</tr>
 
-			<tr>
-				<th class="partner_table-th1">업체주소<span class="essential_mark"> *</span></th>
-				<td colspan="3" class="partner_table-th2"><input type="text"
-					id="company_address" maxlength="50"></td>
+				<tr>
+					<th class="partner_table-th1">업체주소<span class="essential_mark">
+							*</span></th>
+					<td colspan="3" class="partner_table-th2"><input type="text"
+						id="company_address" maxlength="50"></td>
 
-			</tr>
-			<tr>
-				<th class="partner_table-th1">인감 증명서<br> 첨부<span class="essential_mark">*</span></th>
-				<td colspan="3" class="partner_table-th2"><input type="file"
-					multiple="multiple" id="partner_input-file">
-					<label for="partner_input-file" id="ch_file">
-						파일 선택을 선택하세요( 이미지 또는 pdf 파일 첨부) </label></td>
-			</tr>
-			<tr>
-				<th class="partner_table-th1">담당자명<span class="essential_mark"> *</span></th>
-				<td class="partner_table-th2"><input
-					type="text" id="partner_name"></td>
-				<td class="partner_table-th3"><b>담당자 연락처</b><span
-					class="essential_mark">*</span></td>
-				<td class="partner_table-th2">
-				<input type="text" id="partner_tel"
-					maxlength="13" placeholder="  - '하이픈' 포함"></td>
+				</tr>
+				<tr>
+					<th class="partner_table-th1">인감 증명서<br> 첨부<span
+						class="essential_mark">*</span></th>
+					<td colspan="3" class="partner_table-th2"><input type="file"
+						multiple="multiple" id="partner_input-file"> <label
+						for="partner_input-file" id="ch_file"> 파일 선택을 선택하세요( 이미지
+							또는 pdf 파일 첨부) </label></td>
+				</tr>
+				<tr>
+					<th class="partner_table-th1">담당자명<span class="essential_mark">
+							*</span></th>
+					<td class="partner_table-th2"><input type="text"
+						id="partner_name"></td>
+					<td class="partner_table-th3"><b>담당자 연락처</b><span
+						class="essential_mark">*</span></td>
+					<td class="partner_table-th2"><input type="text"
+						id="partner_tel" maxlength="13" placeholder="  - '하이픈' 포함"></td>
 
-			</tr>
-			<tr>
-				<th class="partner_table-th1">업종<span class="essential_mark"> *</span></th>
-				<td class="partner_table-th2"><select id="partner_sectors" readonly>
-						<option value="" disabled selected hidden>선택하세요</option>
-						<option value="모텔">모텔</option>
-						<option value="호텔">호텔</option>
-						<option value="리조트">리조트</option>
-						<option value="펜션">펜션</option>
-						<option value="게스트하우스">게스트하우스</option>
-				</select></td>
-				<td class="partner_table-th3"><b>지역</b></td>
-				<td class="partner_table-th2"><select
-					id="partner_region" readonly>
-						<option value="" disabled selected hidden>선택하세요</option>
-						<option value="북구">북구</option>
-						<option value="서구">서구</option>
-						<option value="중구">중구</option>
-						<option value="남구">남구</option>
-						<option value="동구">동구</option>
-						<option value="수성구">수성구</option>
-						<option value="달서구">달서구</option>
-						<option value="달성군">달성군</option>
-				</select></td>
-			</tr>
-			<tr>
-				<td id="cau_kty"><span class="essential_mark"><b>*</b></span> 값은 필수입니다.</td>
-			</tr>
-			<tr id="sss">
-				<td class="tang" ></td>
-				<td class="tang"></td>
-				<td class="tang">
-				</th>
-				<td class="tang2">
-					<input type="button" id="reg_partner_final" value="파트너 신청하기">
-				</td>
-			</tr>
-			<tr></tr>
+				</tr>
+				<tr>
+					<th class="partner_table-th1">업종<span class="essential_mark">
+							*</span></th>
+					<td class="partner_table-th2"><select id="partner_sectors"
+						readonly>
+							<option value="" disabled selected hidden>선택하세요</option>
+							<option value="모텔">모텔</option>
+							<option value="호텔">호텔</option>
+							<option value="리조트">리조트</option>
+							<option value="펜션">펜션</option>
+							<option value="게스트하우스">게스트하우스</option>
+					</select></td>
+					<td class="partner_table-th3"><b>지역</b></td>
+					<td class="partner_table-th2"><select id="partner_region"
+						readonly>
+							<option value="" disabled selected hidden>선택하세요</option>
+							<option value="북구">북구</option>
+							<option value="서구">서구</option>
+							<option value="중구">중구</option>
+							<option value="남구">남구</option>
+							<option value="동구">동구</option>
+							<option value="수성구">수성구</option>
+							<option value="달서구">달서구</option>
+							<option value="달성군">달성군</option>
+					</select></td>
+				</tr>
+				<tr>
+					<td id="cau_kty"><span class="essential_mark"><b>*</b></span>
+						값은 필수입니다.</td>
+				</tr>
+				<tr id="sss">
+					<td class="tang"></td>
+					<td class="tang"></td>
+					<td class="tang">
+					</th>
+					<td class="tang2"><input type="button" id="reg_partner_final"
+						value="파트너 신청하기"></td>
+				</tr>
+				<tr></tr>
 
-		</table>
-
+			</table>
+		</div>
 
 
 		<!-- 사이드 바 -->
 		<nav id="mypage_sidebar_nav">
 			<ul>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">나의
+				<li class="mypage_sidebar"><a th:href="@{/user/mypage/me}">내
 						정보</a></li>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_booking}">예약
-					내역</a></li>
+				<li class="mypage_sidebar"><a
+					th:href="@{/user/mypage/my_booking}">예약 내역</a></li>
 				<li class="mypage_sidebar"><a
 					th:href="@{/user/mypage/my_inquiry}"> 문의 내역</a></li>
-				<li class="mypage_sidebar">
-				<a 	th:href="@{/user/mypage/partner_reg}" class="active">파트너 신청</a>
-				<li class="mypage_sidebar"><a th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
+				<li class="mypage_sidebar"><a
+					th:href="@{/user/mypage/partner_reg}" class="active">파트너 신청</a>
+				<li class="mypage_sidebar"><a
+					th:href="@{/user/mypage/my_partner_reg}">파트너 신청 내역</a></li>
 				</li>
 				<li class="mypage_sidebar"><a
-				th:href="@{/user/mypage/my_productList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 상품 목록</a></li>
-			<li class="mypage_sidebar"><a
-				th:href="@{/user/mypage/my_acc_bookList}" sec:authorize="hasRole('ROLE_PARTNER')"> 내 업소 예약리스트</a></li>	
+					th:href="@{/user/mypage/my_productList}"
+					sec:authorize="hasRole('ROLE_PARTNER')"> 내 상품 목록</a></li>
+				<li class="mypage_sidebar"><a
+					th:href="@{/user/mypage/my_acc_bookList}"
+					sec:authorize="hasRole('ROLE_PARTNER')"> 내 업소 예약리스트</a></li>
 			</ul>
 		</nav>
 
