--- a/src/main/resources/templates/syw/adminNotice_list.html
+++ b/src/main/resources/templates/syw/adminNotice_list.html
@@ -3,59 +3,12 @@
 
 
 <head>
+	<title>DAEBAK</title>
 	<link rel="stylesheet" href="/css/admin_notice.css">
 	<meta charset="utf-8">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
-
-
-	<script>
-		$(document).ready(function() {
-    $(".notice-content, .notice_btn").hide(); // 페이지 로드 시 모든 notice-content와 notice_btn을 숨깁니다.
-
-    $(".notice-item").click(function() {
-        // 현재 클릭된 notice-item 내의 notice-content와 notice_btn을 토글합니다.
-        $(this).find(".notice-content, .notice_btn").toggle();
-    });
-
-			// 알림창이 나타나도록 이벤트 추가
-			$(document).ready(function () {
-				$('.del_btn').click(function (e) {
-					e.preventDefault();
-					var id = $(this).data('id');
-
-					Swal.fire({
-						title: '공지사항',
-						text: "공지사항을 삭제하시겠습니까?",
-						icon: 'question',
-						showCancelButton: true,
-						confirmButtonText: '예',
-						cancelButtonText: '아니요'
-					}).then((result) => {
-						if (result.isConfirmed) {
-							Swal.fire({
-								title: '공지사항',
-								text: '공지사항이 삭제되었습니다.',
-								icon: 'success'
-							}).then(() => {
-								window.location.href = '/admin/delete/' + id;
-							});
-						} else if (result.dismiss === Swal.DismissReason.cancel) {
-							// If the user clicks "아니요" (No) button
-							Swal.fire({
-								title: '공지사항',
-								text: '삭제가 취소되었습니다.',
-								icon: 'info'
-							});
-						}
-					});
-				});
-			});
-		});
-	</script>
-
-
-
+	<script th:src="@{/js/adminNoticeList.js}"></script>
 </head>
 
 <body>
@@ -72,10 +25,11 @@
 					<div class="notice-content">
 						<p th:utext="${notice.content}"></p>
 					</div>
-						<div class="notice_btn">
-							<a class="modi_btn" th:href="@{/admin/modify/{id}(id=${notice.id})}">수정</a>
-							<a class="del_btn" href="#" th:data-id="${notice.id}">삭제</a>
-						</div>
+					<div class="notice_btn">
+						<button class="modi_btn"
+							th:onclick="'window.location.href=\'/admin/modify/' + ${notice.id} + '\''">수정</button>
+						<button class="del_btn" th:data-id="${notice.id}">삭제</button>
+					</div>
 
 
 				</div>
@@ -96,7 +50,6 @@
 						</li>
 					</ul>
 				</div>
-				<!-- 		<a href="/admin/createNotice">공지사항 등록</a> -->
 			</div>
 		</div>
 
