--- a/src/main/resources/templates/syw/inquiryModify.html
+++ b/src/main/resources/templates/syw/inquiryModify.html
@@ -2,107 +2,8 @@
 <html>
 
 <head>
-	<title>Inquiry List</title>
-	<style>
-		label {
-			display: block;
-			margin-top: 10px;
-		}
-
-		select {
-			width: 100%;
-			padding: 10px 5px;
-			margin: 10px 0px;
-			border-radius: 5px;
-
-		}
-
-		textarea {
-			width: 100%;
-			height: 300px;
-			margin-top: 10px;
-		}
-
-		button {
-			margin-top: 10px;
-			padding: 5px 10px;
-		}
-
-		input[type="submit"] {
-			background-color: #e40000d3;
-			color: white;
-			border: none;
-			padding: 10px 20px;
-			cursor: pointer;
-			display: block;
-			margin: 0 auto;
-		}
-
-
-		.inquiry-title {
-			font-weight: bold;
-			margin-bottom: 5px;
-		}
-
-
-		#inquiry-title-input {
-			width: 100%;
-			padding: 10px;
-			margin-top: 5px;
-			box-sizing: border-box;
-			border-radius: 5px;
-		}
-
-		#message {
-			width: 100%;
-			padding: 15px;
-			margin-top: 5px;
-			box-sizing: border-box;
-			border-radius: 5px;
-		}
-
-		#new-inquiry-form,
-		#my-inquiry-container {
-			margin-left: 200px;
-			max-width: 700px;
-		}
-
-
-		#mypage_sidebar_nav {
-			margin-left: -250px;
-		}
-
-		#new-inquiry-form {
-			margin-left: -40px;
-			margin-top: 40px;
-		}
-
-		#container {
-			margin-left: -80px;
-		}
-
-		input[type="submit"] {
-			background-color: #e40000d3;
-			color: white;
-			border: none;
-			padding: 10px 20px;
-			cursor: pointer;
-			display: block;
-			margin: 0 auto;
-		}
-
-		.mypage_sidebar a {
-			color: black;
-		}
-
-		#mypage_sidebar_nav {
-			margin-left: -100px;
-		}
-
-		#message {
-			box-sizing: border-box;
-		}
-	</style>
+	<title>DAEBAK</title>
+	<link rel="stylesheet" href="/css/inquiryModify.css">
 </head>
 
 <body>
