--- a/src/main/resources/templates/syw/inquiry_answer.html
+++ b/src/main/resources/templates/syw/inquiry_answer.html
@@ -2,87 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<title>DAEBAK</title>
+	<link rel="stylesheet" href="/css/inquiry_answer.css">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
 	<meta charset="utf-8">
-	<style>
-		.pagination {
-			display: flex;
-			justify-content: center;
-			list-style: none;
-			padding: 0;
-			margin-top: 20px;
-		}
-
-		.page-item {
-			margin: 0 5px;
-		}
-
-		.page-link {
-			display: inline-block;
-			padding: 5px 10px;
-			border: 1px solid #ccc;
-			border-radius: 3px;
-			text-decoration: none;
-			color: #333;
-			background-color: #f2f2f2;
-		}
-
-		.page-link:hover {
-			background-color: #e0e0e0;
-		}
-
-		.content-container {
-			margin: 0 auto;
-			max-width: 800px;
-		}
-
-		.inquiry_list {
-			margin-top: 20px;
-		}
-
-		tr:nth-child(even) {
-			background-color: #f2f2f2;
-		}
-
-		h2 {
-			text-align: center;
-		}
-
-		.answer_form {
-			/* 답변 입력 칸 스타일 */
-			margin-top: 20px;
-		}
-
-		.answer_form textarea {
-			width: 790px;
-			height: 300px;
-			padding: 5px;
-			border-radius: 5px;
-		}
-
-		.answer_form input[type="submit"] {
-			margin: 10px auto;
-			padding: 5px 10px;
-			background-color: rgb(255, 128, 128);
-			color: white;
-			border: none;
-			border-radius: 3px;
-			cursor: pointer;
-		}
-
-		.inquiry-container {
-			background-color: rgb(233, 233, 233);
-			border-radius: 7px;
-		}
-
-		.answer-container {
-			background-color: rgb(233, 233, 233);
-			border-radius: 7px;
-		}
-	</style>
-
-
-
 </head>
 
 <body>
@@ -127,7 +51,6 @@
 				</form>
 			</div>
 		</div>
-
 </body>
 
 </html>
