--- a/src/main/resources/templates/syw/noticeList.html
+++ b/src/main/resources/templates/syw/noticeList.html
@@ -2,59 +2,8 @@
 <html>
 
 <head>
-	<title>숙박업소 홈페이지</title>
-	<style>
-		.content-container {
-			width: 900px;
-			margin-left: -200px;
-			margin-top: 25px;
-		}
-
-		.notice-item {
-			border-bottom: 1px solid #ccc;
-			margin-top: 20px;
-			padding: 8px 0px;
-			cursor: pointer;
-		}
-
-		.notice-content {
-			display: none;
-			border-radius: 7px;
-			padding: 0px 20px;
-		}
-
-		.pagination ul {
-			list-style-type: none;
-			display: flex;
-			justify-content: center;
-			padding: 0;
-		}
-
-		.pagination ul li {
-			margin-right: 10px;
-		}
-
-		.pagination ul li:last-child {
-			margin-right: 0;
-		}
-
-		#mypage_sidebar_nav {
-			margin-left: -100px;
-		}
-
-		.date {
-			color: rgb(193, 193, 193);
-		}
-
-		.notice_header {
-			color: #e40000d3;
-			margin-top: 40px;
-		}
-
-		.mypage_sidebar a {
-			color: black;
-		}
-	</style>
+	<title>DAEBAK</title>
+	<link rel="stylesheet" href="/css/noticeList.css">
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script>
 		$(document).ready(function () {
@@ -94,9 +43,9 @@
 			<div th:each="notice : ${page}" class="notice-item">
 				<h3 th:text="${notice.title}"></h3>
 				<p class="date" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></p>
-				 <div class="notice-content" style="background-color: rgb(243, 243, 243); white-space: pre-line;">
-                    <p th:utext="${notice.content}"></p>
-                </div>
+				<div class="notice-content" style="background-color: rgb(243, 243, 243); white-space: pre-line;">
+					<p th:utext="${notice.content}"></p>
+				</div>
 			</div>
 
 			<div class="pagination">
@@ -115,8 +64,8 @@
 			</div>
 		</div>
 		<div th:if="${page.getContent().size() < 1}" class="center-content3">
-         <h1>등록된 공지사항이 없습니다.</h1>
-      </div>
+			<h1>등록된 공지사항이 없습니다.</h1>
+		</div>
 	</div>
 </body>
 
