--- a/src/main/resources/templates/syw/notice_modify.html
+++ b/src/main/resources/templates/syw/notice_modify.html
@@ -2,48 +2,42 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<script
-	src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
-<meta charset="utf-8">
-<link rel="stylesheet" href="/css/admin_notice.css">
-<script
-	src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/ckeditor.js"></script>
-<script
-	src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/translations/ko.js"></script>
-
-
-
-
-
+	<title>DAEBAK</title>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.all.min.js"></script>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="/css/admin_notice.css">
+	<script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/ckeditor.js"></script>
+	<script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/translations/ko.js"></script>
 </head>
 
 <body>
-<html layout:decorate="~{khk/adminNavbar}">
-<div layout:fragment="adminNav" class="container my-3">
-	<div class="content-container">
-		<h1>공지사항 수정</h1>
-		<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
-			<div class="notice_title">
-				<label for="title">공지사항 제목</label> <input type="text" id="title"
-					name="title" th:value="${notice.title}" required>
-				<br>
-			</div>
-			<div class="notice_content">
-				<label for="content">공지사항 내용</label><br>
-				<textarea id="content" name="content" rows="40"
-					data-editor="ckeditor" required th:text="${notice.content}">
+	<html layout:decorate="~{khk/adminNavbar}">
+	<div layout:fragment="adminNav" class="container my-3">
+		<div class="content-container">
+			<h1>공지사항 수정</h1>
+			<form method="post" th:action="@{/admin/modify/{id}(id=${notice.id})}">
+				<div class="notice_title">
+					<label for="title">공지사항 제목</label> <input type="text" id="title" name="title"
+						th:value="${notice.title}" required>
+					<br>
+				</div>
+				<div class="notice_content">
+					<label for="content">공지사항 내용</label><br>
+					<textarea id="content" name="content" rows="40" data-editor="ckeditor" required
+						th:text="${notice.content}">
 				</textarea>
-			</div>
-			<input type="submit" value="등록" class="create_notice_btn">
-		</form>
-	</div>
+				</div>
+				<input type="submit" value="등록" class="create_notice_btn">
+			</form>
+		</div>
 
 
-	<script>
-    ClassicEditor
-        .create(document.querySelector('[data-editor="ckeditor"]'), {
-            language: "ko"
-        });
-</script>
-	</body>
+		<script>
+			ClassicEditor
+				.create(document.querySelector('[data-editor="ckeditor"]'), {
+					language: "ko"
+				});
+		</script>
+</body>
+
 </html>
