구글 로그인 삭제

--- a/src/main/resources/templates/kty/login_form.html
+++ b/src/main/resources/templates/kty/login_form.html
@@ -46,7 +46,7 @@
 		<a href="/user/signup">회원가입</a>
 	</form>
 	<img src="/img/kakao_login.png" id="kakao_login_btn" style="margin-left:10px; margin-top:20px; margin-bottom:20px;"></img>
-	<img src="/img/google_login2.png" id="google_login_btn" style="margin-left:10px; margin-bottom:20px;"></img>
+	<!-- <img src="/img/google_login2.png" id="google_login_btn" style="margin-left:10px; margin-bottom:20px;"></img> -->
 	<img src="/img/naver_login.png" id="naver_login_btn" style="margin-left:10px;"></img>
 
 </div>
